tests/ui/impl-trait/normalize-tait-in-const.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/normalize-tait-in-const.rs:27:35
   |
LL | const fn with_positive<F: for<'a> ~const Fn(&'a Alias<'a>) + ~const Destruct>(fun: F) {
   |                                   ^^^^^^ can't be applied to `Fn`
   |
note: `Fn` can't be used with `~const` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/normalize-tait-in-const.rs:27:35
   |
LL | const fn with_positive<F: for<'a> ~const Fn(&'a Alias<'a>) + ~const Destruct>(fun: F) {
   |                                   ^^^^^^ can't be applied to `Fn`
   |
note: `Fn` can't be used with `~const` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/normalize-tait-in-const.rs:28:5
   |
LL |     fun(filter_positive());
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
